<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright WeiLianYang
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/hint_plaintext" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_plain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_plaintext"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:maxLines="10"
                    android:minLines="3"
                    tools:ignore="Autofill" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/hint_associated_data" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_associated"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_associated_data"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:maxLines="10"
                    android:minLines="3"
                    tools:ignore="Autofill" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/hint_ciphertext" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_cipher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_ciphertext"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:maxLines="10"
                    android:minLines="3"
                    tools:ignore="Autofill" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_encrypt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/action_encrypt"
                android:textAllCaps="false"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_decrypt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_decrypt"
                android:textAllCaps="false"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>