...
    <string name="hint_associated_data">Only the integrity of this associated data will be guaranteed. For successful decryption it must be the same as the associated data used during encryption.</string>
    <string name="prompt_ciphertext">Ciphertext</string>
    <string name="hint_ciphertext">The ciphertext is in Base64 encoding. Try to modify it and verify that the decryption will fail.</string>

    <string name="action_encrypt">Encrypt</string>
    <string name="action_decrypt">Decrypt</string>
    <string name="error_cannot_encrypt">Cannot encrypt</string>
    <string name="error_cannot_decrypt">Cannot decrypt</string>
    <string name="error_field_required">This field is required</string>
    <string name="hint_bubble_page">This is bubble page</string>
    <string name="channel_new_messages">New messages</string>
    <string name="channel_new_messages_description">All new incoming messages.</string>

...
